# PYTUINT

./: .gitignore  AI_chat.py  MANIFEST.in  MakeFIle  README.md  pyproject.toml  setup.cfg  setup.py  t.py
.github/workflows/: build.yml
Examples/: AI_chat.py  Calculator.py  LICENSE  Piano.py  dashboard.py
include/: ptui.hpp
include/PYTUINT/: PYTUINT.hpp
include/ptui/: ptui.hpp
python/: __init__.py
src/PYTUINT/: __init__.py  _core.py  core.py
src/ptui/: __init__.py  _core.py  core.py
src_cpp/: bindings.cpp  core.cpp
