[metadata]
name = ptui-tui
version = 0.1.0
author = nahiyancode-maker
author_email = bopskibi33@gmail.com
description = A React-inspired, GPU-grade TUI framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nahiyancode-maker/PTUI
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    flake8
